--- a/gama/core/templates/core/contato.html
+++ b/gama/core/templates/core/contato.html
@@ -3,13 +3,14 @@
 {% block content %}
 {% load static %}
 <div class="tabela">
+    <section>
     <div class="sobre h1">
         <h1>Fale conosco</h1>
         <p>Você pode entrar em contato conosco tanto por e-mail como pelas redes sociais, abaixo seguem os links para contato:</p>
-        <h4>Links</h4>
-        <ul>
-            <li>E-mail: <a href="mailto:gavazzonimaicon@hotmail.com">contato@simplemooc.org</a></li>
-        </ul>
+        <h4>E-mail</h4>
+
+        <h6><a href="mailto:gavazzonimaicon@hotmail.com"><font color="black">gavazzonimaicon@hotmail.com</font></a></h6>
     </div>
+    </section>
 </div>
 {% endblock %}
