--- a/gama/accounts/templates/accounts/password_reset_confirm.html
+++ b/gama/accounts/templates/accounts/password_reset_confirm.html
@@ -1,31 +1,33 @@
-{% extends "base.html" %}
+{% extends "core/base.html" %}
 
 {% block content %}
-<div class="pure-g-r content-ribbon">
-    <div class="pure-u-1">
-        {% if success %}
+{% load widget_tweaks %}
+{% load static %}
+
+    <div class="login-dark">
+        <form method="post">
+            {% if success %}
         <p>Sua senha foi criada com sucesso</p>
         {% else %}
-        <h2>Informe sua nova Senha</h2>
-        <form class="pure-form pure-form-stacked" method="post">
+        <h6>Informe sua nova Senha</h6>
             {% csrf_token %}
-            <fieldset>
-                {{ form.non_field_errors }}
+            {{ form.non_field_errors }}
+            <h2 class="sr-only">Login Form</h2>
+            <div class="illustration"></div>
+            {% for field in form %}
+            <div class="form-group">
 
-                {% for field in form %}
-                <div class="pure-control-group">
-                    {{ field.label_tag }}
-                    {{ field }}
-                    {{ field.errors }}
-                </div>
-                {% endfor %}
+                {{ field.label_tag }}
+                {{field|add_class:"form-control"}}
+                {{ field.errors }}
+            </div>
+            {% endfor %}
 
-                <div class="pure-controls">
-                    <button type="submit" class="pure-button pure-button-primary">Enviar</button>
-                </div>
-            </fieldset>
+            <div class="form-group"><button class="btn btn-primary btn-block">Enviar</button>
+            </div>
         </form>
-        {% endif %}
+         {% endif %}
     </div>
-</div>
+
+
 {% endblock %}
