--- a/gama/accounts/templates/accounts/register.html
+++ b/gama/accounts/templates/accounts/register.html
@@ -1,27 +1,28 @@
-{% extends "base.html" %}
+{% extends "core/base.html" %}
 
 {% block content %}
-<div class="pure-g-r content-ribbon">
-    <div class="pure-u-1">
-        <h2>Informe seus dados</h2>
-        <form class="pure-form pure-form-stacked" method="post">
+{% load widget_tweaks %}
+{% load static %}
+
+    <div class="login-dark">
+        <form method="post">
+            <h5 color="red">Informe seus dados</h5>
             {% csrf_token %}
-            <fieldset>
-                {{ form.non_field_errors }}
+            {{ form.non_field_errors }}
+            <h2 class="sr-only">Login Form</h2>
+            <div class="illustration"></div>
+            {% for field in form %}
+            <div class="form-group">
 
-                {% for field in form %}
-                <div class="pure-control-group">
-                    {{ field.label_tag }}
-                    {{ field }}
-                    {{ field.errors }}
-                </div>
-                {% endfor %}
+                {{ field.label_tag }}
+                {{field|add_class:"form-control"}}
+                {{ field.errors }}
+            </div>
+            {% endfor %}
 
-                <div class="pure-controls">
-                    <button type="submit" class="pure-button pure-button-primary">Cadastrar</button>
-                </div>
-            </fieldset>
+            <div class="form-group"><button class="btn btn-primary btn-block">Cadastrar</button>
+            </div>
         </form>
     </div>
-</div>
+
 {% endblock %}
