--- a/gama/sharp/templates/sharp/list.html
+++ b/gama/sharp/templates/sharp/list.html
@@ -1,10 +1,65 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "core/base.html" %}
+
+{% block content %}
+
+    <div class="tabela">
+        <section>
+            <div class="table-responsive">
+                <table class="table table-striped table-hover table-dark">
+
+                    <thead>
+                        <tr>
+                            <th>Nome Listas</th>
+                            <th><a class="btn btn-warning" data-toggle="modal" href="#portfolio-modal-2"> Adiciona Nova Lista</a></th>
+                            <th><a href="{% url 'sharp:categoria_print' %}" class="btn btn-warning" target="print"><span class="fa fa-print"></span> PDF Listas</a></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    {% for lista in lista %}
+                        <tr>
+
+                            <td ><a href="{% url 'sharp:itens_list' lista.pk %}">{{ lista }}</a></td>
+                            <td>
+
+                                <a href="{% url 'sharp:categoria_print_one' lista.pk %}" target="print" class="btn btn-warning"">
+                                <span class="fa fa-print"> PDF Conteúdo</span>
+                                </a>
+                            </td>
+                            <td>
+
+                                <span class="glyphicon glyphicon-trash"></span><a href="{% url 'sharp:delete' lista.pk %}"> Delete</a>
+
+                            </td>
+
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </section>
+    </div>
+
+
+
+<div class="modal text-center" role="dialog" tabindex="-1" id="portfolio-modal-2">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button></div>
+                <div class="modal-body">
+                    <div class="container text-center">
+                        <div class="row">
+                            <!--aqui vai o form-->
+                            <form method="post" action="">
+                                {% csrf_token %}
+                                {{ form.as_p }}
+
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer pb-5"><a class="btn btn-primary btn-lg mx-auto rounded-pill portfolio-modal-dismiss" role="button" ><i class="fa fa-close"></i>&nbsp;<button type="submit">Criar Lista</button></a></div>
+            </form>
+            </div>
+        </div>
+    </div>
+
+{% endblock %}
