--- a/gama/sharp/templates/sharp/partial_create_item.html
+++ b/gama/sharp/templates/sharp/partial_create_item.html
@@ -1,10 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% load widget_tweaks %}
+
+<form method="post" action="{% url 'sharp:create_list' %}" class="js-book-create-form"><!-- ação no url e classe js para conectar com o JavaScript-->
+  {% csrf_token %}
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+    <h4 class="modal-title">Inserir um novo Item</h4>
+  </div>
+  <div class="modal-body">
+
+    {% include 'sharp/partial_list_form.html' %}
+
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+    <button type="submit" class="btn btn-primary">Iserir Item</button>
+  </div>
+</form>
