--- a/gama/sharp/templates/sharp/partial_list_update.html
+++ b/gama/sharp/templates/sharp/partial_list_update.html
@@ -1,10 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% load widget_tweaks %}
+
+<form method="post" action="{% url 'sharp:list_update' form.instance.pk %}" class="js-book-update-form"><!-- ação no url e classe js para conectar com o JavaScript-->
+  {% csrf_token %}
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+    <h4 class="modal-title">Editar Item</h4>
+  </div>
+  <div class="modal-body">
+
+    {% include 'sharp/partial_list_form.html' %}
+
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+    <button type="submit" class="btn btn-primary">Editar Item</button>
+  </div>
+</form>
+
